# audio-plugin-coder

./: .gitignore  APC_VISAGE_PLAN.md  CHANGELOG.md  CMakeLists.txt  README.md  cloudwash_crash_log.txt
.agent/skills/skill_design/: SKILL.md
.agent/skills/skill_implementation/: SKILL.md
.agent/templates/visage/: VisageControls.h.template
.agent/workflows/: design.md  impl.md  plan.md
.claude/: WEBVIEW_FRAMEWORK_ANALYSIS.md  settings.local.json
.claude/skills/design/: SKILL.md
.claude/skills/impl/: SKILL.md
.claude/skills/ship/: SKILL.md
.claude/workflows/: design.md  dream.md  impl.md  plan.md  ship.md
.github/workflows/: build-pr.yml  build-release.yml
.kilocode/skills/skill_design/: SKILL.md
.kilocode/workflows/: design.md  impl.md  plan.md  ship.md
cmake/: FindWebView2.cmake
docs/: FAQ.md  PROJECT_STRUCTURE.md  README.md  build-system.md  command-reference.md  github-actions.md  installer-creation.md  plugin-development-lifecycle.md  ship-workflow.md  state-management-deep-dive.md  troubleshooting-guide.md  webview-framework.md
plugins/CloudWash/: CMakeLists.txt
plugins/WAVFin Effect Engine/: CMakeLists.txt  status.json
plugins/WAVFin Effect Engine/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/WAVFin Effect Engine/Design/: v3-style-guide.md  v3-test.html  v3-ui-spec.md  v4-test.html
plugins/WAVFin Effect Engine/Source/: ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/WAVFin Effect Engine/Source/ui/public/: index.html
plugins/WAVFin Effect Engine/Source/ui/public/js/: index.js
plugins/WAVFin Effect Engine/Source/ui/public/js/juce/: check_native_interop.js
plugins/WAVFin Effect Engine/_state_backups/: status_backup_20260211_172542.json
plugins/gnarly2/: CMakeLists.txt
plugins/gnarly3/: CMakeLists.txt
plugins/nf_gnarly/: CMakeLists.txt
scripts/: build-and-install.ps1  setup.ps1  validate-webview-setup.ps1
scripts/installer/: create-windows-installer.ps1  installer-template.iss
templates/: CMakeLists.visage.template
(+5 files in other folders)
